--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
   </div>
 
-  <script src="../source/index.js"></script>
+  <script src="index.js"></script>
   <script>
     var sm = new ScrollManager();
 
