Fixed blog link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class='Content'>
     <h1>Window scroll manager demo</h1>
     <div class="Links">
-      <a href="stanko.github.io">My Blog</a> &bull;
+      <a href="https://stanko.github.io">My Blog</a> &bull;
       <a href="https://github.com/Stanko/window-sroll-manager">GitHub</a> &bull;
       <a href="https://www.npmjs.com/package/window-sroll-manager">npm</a>
     </div>
